# SharperC

./: CMakeLists.txt  README.md
Benchmarks/: CMakeLists.txt
Benchmarks/Source/: ArrayBench.cpp
Include/: SharperC.hpp
Include/SharperC/: ArcObject.hpp  Array.hpp  Collections.hpp  Delegate.hpp  List.hpp  Platform.hpp
Source/: SharperC.cpp  Timers.cpp
Test/: CMakeLists.txt
Test/Source/: ArrayTest.cpp  ListTest.cpp
